<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小世界</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_forpwd">ForgetPasswdActivity</string>
    <string name="title_activity_chat">ChatAvtivity</string>
    <string name="ImageViewDescription">Default</string>
    <string name="hint_username">账号(邮箱)</string>
    <string name="hint_password">密码(字母数字组合)</string>
    <string name="hint_submit">登录</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="registration">注册</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="username">用户名</string>
    <string name="back">返回</string>
    <string name="thelaststep">上一步</string>
    <string name="thenextstep">下一步</string>
    <string name="uploadphoto">上传头像</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_talk">TalkActivity</string>
    <string name="send">发送</string>
    <string name="hpdsp">头像</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="numivdsp">游戏数字</string>
    <string name="logining">登录中。。。</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="email">邮箱</string>
    <string name="idetifycode">验证码</string>
    <string name="submit">提交</string>
    <string name="reg_username">用户名</string>
    <string name="birthday">生日</string>
    <string name="passwdagain">再次输入密码</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="sign">个性签名</string>
    <string name="edit">编辑</string>
    <string name="title_activity_personal_info_edit">PersonalInfoEditActivity</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="title_activity_main_test">Main_testActivity</string>
    <string name="title_activity_friend_add">FriendAddActivity</string>
    <string name="setting">设置</string>
    <string name="addfriend">添加好友</string>

</resources>
