<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <com.example.hellostranger.view.RoundImageView
                android:id="@+id/signin_iv_headicon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/ImageViewDescription"
                android:scaleType="fitXY"
                android:src="@drawable/icon_hp" />

            <EditText
                android:id="@+id/signin_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signin_iv_headicon"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/hint_username"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/signin_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signin_et_username"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_bg"
                android:hint="密码"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textSize="25sp" />

            <Button
                android:id="@+id/signin_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signin_et_pwd"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/submit_button_selector"
                android:text="@string/hint_submit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/signin_tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/forgetpassword"
        android:textColor="@drawable/text_selector" />

    <TextView
        android:id="@+id/signin_tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:text="@string/registration"
        android:textColor="@drawable/text_selector" />

</RelativeLayout>