<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/reg_layout_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_title" >

        <TextView
            android:id="@+id/reg_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reg_layout_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_layout_bottom"
        android:layout_below="@id/reg_layout_top"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@id/reg_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white" >

        <Button
            android:id="@+id/reg_btn_leftbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/submit_button_selector"
            android:textColor="#FFFFFF"
            android:text="@string/back"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/reg_btn_rightbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/submit_button_selector"
            android:textColor="#FFFFFF"
            android:text="@string/thenextstep"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>